src/assets/scss/global.scss
@charset "UTF-8";

@import 'base/_reset',
'base/_root',
'base/_typography';

// spacing
.pt-6 {
  padding-top: 4rem;
}

// display
.d-none {
  display: none;
}

// 輸入窗預設
textarea {
  padding: 0;
  resize: none;
}

.container-lg {
  max-width: 380px;
}

.text-muted{
  font-size: 14px;
  color: var(--secondary);
}

// 頭像
.avatar {
  height: 50px;
  width: 50px;
  border-radius: 50%;
}

// 上讓串接進來的頭像都變圓圈圈
.avatarImg {
  border-radius: 50%;
  object-fit: cover;
}

// 跟隨 toggle 按鈕
.toggle-follow {
  width: 64px;
  height: 40px;
  padding: 8px 16px;
  border: 1px solid var(--brand-color);
  border-radius: 50px;
  color: var(--brand-color);
  cursor: pointer;

  &:hover{
    color: var(--dark-0);
    background-color: var(--brand-color);
  }

  &.following {
    width: 96px;
    background-color: var(--brand-color);
    color: #FFFFFF;
    &:hover{
      opacity: 0.8;
    }
  }
}

// 每個 page containet 架構 (除regist、login、admin系列、setting帳號設定)
.container-twitter {
  display: grid;
  grid-template-columns: 20% auto 25%;
  max-width: 1500px;
  justify-items: center;
  margin: 0 auto;
}

// Modal - 推文、回覆跟首頁推文按鈕
.btn-post-reply-tweet {
  padding: 8px 16px;
  width: 64px;
  height: 40px;
  font-weight: 400;
  font-size: 16px;
  border-radius: 50px;
  color: #FFFFFF;
  background: var(--brand-color);
  cursor: pointer;
}

// Modal - 推文、回覆關閉視窗按鈕
.modal-close {
  width: 15px;
  height: 15px;
  position: absolute;
  top: 20.5px;
  left: 20.5px;
  cursor: pointer;
}

// Modal 視窗彈出後, 其他背景反灰
.modal-background {
  height: 100vh;
  width: 100vw;
  position: fixed;
  background-color: #0b0b0b;
  opacity: 0.5;
  top: 0;
  left: 0;
  z-index: 10;
}

// View - SimpleTwitter. Tweet. User. UserFollowStatus
// 中間區塊的container版型
.center-container {
  border-left: 1px solid var(--border);
  border-right: 1px solid var(--border);
  width: 100%;
  height: calc(100vh - 75px);
  overflow-y: scroll;
  overflow-x: hidden;
}

.center-section {
  width: 100%;
  border: 1px solid #E6ECF0;
}

// 首頁. Tweet 中間頁面上方header
.header {
  width: 100%;
  height: 75px;
  border-left: 1px solid var(--border);
  border-bottom: 1px solid var(--border);
  border-right: 1px solid var(--border);
  position: relative;
  display: flex;
  align-items: center;

  .title {
    position: absolute;
    top: 25%;
    left: 24px;
  }
}

// 卷軸style
.scrollbar {
  padding-right: 6px;

  &::-webkit-scrollbar {
    width: 8px;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: #C1C1C1;
  }
}

//點選前游標滑過的樣式可以用
.card-hover:hover {
  background-color: var(--border);
  cursor: pointer;
  transition: .2s ease-in-out;
  z-index: -1;
}

// 平板版型
@media (max-width: 992px) {
  .container-twitter {
    display: grid;
    grid-template-columns: 6% auto 35%;
  }
}

